@@ -3,9 +3,9 @@
 name = Example info file
 
 
-; Information added by drupal.org packaging script on 2012-09-06
-version = "7.x-2.0+5-dev"
+; Information added by drupal.org packaging script on 2013-03-09
+version = "7.x-2.1"
 core = "7.x"
 project = "libraries"
-datestamp = "1346891879"
+datestamp = "1362848412"
 
